--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@ body {
   padding: 40px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
+  
+  /* Ajoute des marges internes pour les petits écrans */
+  margin-left: 20px;
+  margin-right: 20px;
 }
+
 
 h2 {
   text-align: center;
